--- a/4a/v1/aula0/introReact/src/components/Conteudo.css
+++ b/4a/v1/aula0/introReact/src/components/Conteudo.css
@@ -4,4 +4,5 @@
     height: calc(100vh - 60px);
     /* min-height: calc(100vh - 60px); */
     /* height: 100vh; */
+    /* opções de altura para mostrar as diferenças */
 }
