--- a/4a/v1/aula00/introReact/src/components/Conteudo.css
+++ b/4a/v1/aula00/introReact/src/components/Conteudo.css
@@ -1,8 +1,15 @@
 .conteudo-container{
     background-color: var(--cor-3);
-    color: var(--cor-1);
+    color: var(--cor-6);
     height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     /* min-height: calc(100vh - 60px); */
     /* height: 100vh; */
     /* opções de altura para mostrar as diferenças */
+}
+.imagem-conteudo{
+    width: 150px;
+    border-radius: 10px;
 }
