Add react aula00 n1

--- a/4a/n1/aula00/src/components/Conteudo/index.css
+++ b/4a/n1/aula00/src/components/Conteudo/index.css
@@ -1,4 +1,10 @@
 .conteudo-container{
     /* background-color: #dddd00; */
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.flor-rosa{
+    width: 200px;
 }
