add array de praia

--- a/4a/n1/aula02-props/props/src/App.css
+++ b/4a/n1/aula02-props/props/src/App.css
@@ -4,6 +4,12 @@
   padding: 2rem;
   text-align: center;
 }
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
 
 .logo {
   height: 6em;
