add var css e img

--- a/2a/v2-cod/componentesDeVerdade/src/components/Cabecalho.css
+++ b/2a/v2-cod/componentesDeVerdade/src/components/Cabecalho.css
@@ -1,3 +1,5 @@
 .Cabecalho-container{
-    background-color: aqua;
+    /* background-color: #ff00ff; */
+    background-color: var(--cor-4);
+    color: var(--cor-1);
 }
