add useState mudando className para mudar background image - style

--- a/2a/v1/propsPages/src/pages/Exercicio.css
+++ b/2a/v1/propsPages/src/pages/Exercicio.css
@@ -1,6 +1,8 @@
 .alto{
     background-image: url('./images/alto.png');
+    min-height: 600px;
 }
 .baixo{
+    min-height: 600px;
     background-image: url('./images/baixo.png');
 }
