ajuste nos styles bonitos :P

--- a/4a/comuns/testes/testeGitHubAxios/src/App.css
+++ b/4a/comuns/testes/testeGitHubAxios/src/App.css
@@ -39,6 +39,7 @@ button {
   padding: 10px 20px;
   background-color: var(--button-background);
   color: var(--button-text);
+  color: var(--text-color);
   border: none;
   cursor: pointer;
   font-size: 16px;
@@ -53,15 +54,15 @@ button {
   margin: 20px;
   border-radius: 10px;
   text-align: left;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
   box-shadow: 0 0 10px rgba(099, 099, 099, 0.5);
 }
 
 .user-card img {
   width: 150px;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 10px rgba(229, 229, 229, 0.5);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+  /* box-shadow: 0 0 10px rgba(229, 229, 229, 0.5); */
   box-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
 }
 
